update notebooks with v0.5.1 Featuretools

--- a/NYC Taxi 2 - Baseline Solution.ipynb
+++ b/NYC Taxi 2 - Baseline Solution.ipynb
@@ -16,16 +16,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/Cellar/python3/3.6.2/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -41,17 +32,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -245,17 +236,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -470,33 +461,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-rmse:5.00222\tvalid-rmse:5.00165\n",
+      "[0]\ttrain-rmse:5.00222\tvalid-rmse:5.00164\n",
       "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
       "\n",
       "Will train until valid-rmse hasn't improved in 60 rounds.\n",
-      "[10]\ttrain-rmse:1.0345\tvalid-rmse:1.03529\n",
-      "[20]\ttrain-rmse:0.588563\tvalid-rmse:0.590879\n",
-      "[30]\ttrain-rmse:0.521021\tvalid-rmse:0.524257\n",
-      "[40]\ttrain-rmse:0.489848\tvalid-rmse:0.494019\n",
-      "[50]\ttrain-rmse:0.475273\tvalid-rmse:0.480304\n",
-      "[60]\ttrain-rmse:0.470008\tvalid-rmse:0.475673\n",
-      "[70]\ttrain-rmse:0.459662\tvalid-rmse:0.465998\n",
-      "[80]\ttrain-rmse:0.454078\tvalid-rmse:0.461092\n",
-      "[90]\ttrain-rmse:0.45028\tvalid-rmse:0.457809\n",
-      "[100]\ttrain-rmse:0.443367\tvalid-rmse:0.45131\n",
-      "[110]\ttrain-rmse:0.435637\tvalid-rmse:0.444054\n",
-      "[120]\ttrain-rmse:0.432269\tvalid-rmse:0.441041\n",
-      "[130]\ttrain-rmse:0.429166\tvalid-rmse:0.438351\n",
-      "[140]\ttrain-rmse:0.427592\tvalid-rmse:0.437218\n",
-      "[150]\ttrain-rmse:0.424559\tvalid-rmse:0.434707\n",
-      "[160]\ttrain-rmse:0.421582\tvalid-rmse:0.432094\n",
-      "[170]\ttrain-rmse:0.419642\tvalid-rmse:0.430527\n",
-      "[180]\ttrain-rmse:0.413601\tvalid-rmse:0.425028\n",
-      "[190]\ttrain-rmse:0.412747\tvalid-rmse:0.424522\n",
-      "[200]\ttrain-rmse:0.407089\tvalid-rmse:0.419405\n",
-      "[210]\ttrain-rmse:0.405644\tvalid-rmse:0.418369\n",
-      "[220]\ttrain-rmse:0.404136\tvalid-rmse:0.41707\n",
-      "Modeling RMSLE 0.41591\n"
+      "[10]\ttrain-rmse:1.03448\tvalid-rmse:1.03527\n",
+      "[20]\ttrain-rmse:0.588907\tvalid-rmse:0.591222\n",
+      "[30]\ttrain-rmse:0.521448\tvalid-rmse:0.524679\n",
+      "[40]\ttrain-rmse:0.49152\tvalid-rmse:0.49566\n",
+      "[50]\ttrain-rmse:0.475846\tvalid-rmse:0.480838\n",
+      "[60]\ttrain-rmse:0.47131\tvalid-rmse:0.47699\n",
+      "[70]\ttrain-rmse:0.457938\tvalid-rmse:0.464323\n",
+      "[80]\ttrain-rmse:0.452809\tvalid-rmse:0.459851\n",
+      "[90]\ttrain-rmse:0.448331\tvalid-rmse:0.455781\n",
+      "[100]\ttrain-rmse:0.442711\tvalid-rmse:0.450655\n",
+      "[110]\ttrain-rmse:0.434419\tvalid-rmse:0.442925\n",
+      "[120]\ttrain-rmse:0.430539\tvalid-rmse:0.439403\n",
+      "[130]\ttrain-rmse:0.427872\tvalid-rmse:0.437131\n",
+      "[140]\ttrain-rmse:0.426528\tvalid-rmse:0.436249\n",
+      "[150]\ttrain-rmse:0.424141\tvalid-rmse:0.43431\n",
+      "[160]\ttrain-rmse:0.421148\tvalid-rmse:0.43164\n",
+      "[170]\ttrain-rmse:0.418708\tvalid-rmse:0.429658\n",
+      "[180]\ttrain-rmse:0.41323\tvalid-rmse:0.424686\n",
+      "[190]\ttrain-rmse:0.412195\tvalid-rmse:0.423993\n",
+      "[200]\ttrain-rmse:0.406393\tvalid-rmse:0.418623\n",
+      "[210]\ttrain-rmse:0.405234\tvalid-rmse:0.417726\n",
+      "[220]\ttrain-rmse:0.402503\tvalid-rmse:0.415351\n",
+      "[226]\ttrain-rmse:0.401547\tvalid-rmse:0.41451\n",
+      "Modeling RMSLE 0.41451\n"
      ]
     }
    ],
@@ -521,17 +513,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -548,23 +540,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>id3004672</th>\n",
-       "      <td>732.184448</td>\n",
+       "      <td>744.959778</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id3505355</th>\n",
-       "      <td>464.602142</td>\n",
+       "      <td>439.119873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id1217141</th>\n",
-       "      <td>422.631470</td>\n",
+       "      <td>432.329071</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id2150126</th>\n",
-       "      <td>1113.882446</td>\n",
+       "      <td>1111.528809</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id1598245</th>\n",
-       "      <td>290.918182</td>\n",
+       "      <td>314.304413</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -573,11 +565,11 @@
       "text/plain": [
        "           trip_duration\n",
        "id                      \n",
-       "id3004672     732.184448\n",
-       "id3505355     464.602142\n",
-       "id1217141     422.631470\n",
-       "id2150126    1113.882446\n",
-       "id1598245     290.918182"
+       "id3004672     744.959778\n",
+       "id3505355     439.119873\n",
+       "id1217141     432.329071\n",
+       "id2150126    1111.528809\n",
+       "id1598245     314.304413"
       ]
      },
      "execution_count": 10,
@@ -664,17 +656,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -689,62 +681,62 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>dropoff_longitude</td>\n",
-       "      <td>8928.0</td>\n",
+       "      <td>8512.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>dropoff_latitude</td>\n",
-       "      <td>8445.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>pickup_latitude</td>\n",
-       "      <td>8203.0</td>\n",
+       "      <td>8365.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>pickup_longitude</td>\n",
-       "      <td>8142.0</td>\n",
+       "      <td>8213.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pickup_latitude</td>\n",
+       "      <td>7799.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>pickup_hour</td>\n",
-       "      <td>3322.0</td>\n",
+       "      <td>3190.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>pickup_day</td>\n",
-       "      <td>3284.0</td>\n",
+       "      <td>3071.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>pickup_minute</td>\n",
-       "      <td>2827.0</td>\n",
+       "      <td>2854.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>pickup_second</td>\n",
-       "      <td>2704.0</td>\n",
+       "      <td>2536.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>pickup_month</td>\n",
-       "      <td>1679.0</td>\n",
+       "      <td>1535.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>passenger_count</td>\n",
-       "      <td>863.0</td>\n",
+       "      <td>831.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>vendor_id</td>\n",
-       "      <td>481.0</td>\n",
+       "      <td>470.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>store_and_fwd_flag</td>\n",
-       "      <td>86.0</td>\n",
+       "      <td>87.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -757,18 +749,18 @@
       ],
       "text/plain": [
        "          feature_name  importance\n",
-       "3    dropoff_longitude      8928.0\n",
-       "1     dropoff_latitude      8445.0\n",
-       "2      pickup_latitude      8203.0\n",
-       "0     pickup_longitude      8142.0\n",
-       "5          pickup_hour      3322.0\n",
-       "6           pickup_day      3284.0\n",
-       "7        pickup_minute      2827.0\n",
-       "11       pickup_second      2704.0\n",
-       "8         pickup_month      1679.0\n",
-       "4      passenger_count       863.0\n",
-       "9            vendor_id       481.0\n",
-       "10  store_and_fwd_flag        86.0\n",
+       "3    dropoff_longitude      8512.0\n",
+       "1     dropoff_latitude      8365.0\n",
+       "0     pickup_longitude      8213.0\n",
+       "2      pickup_latitude      7799.0\n",
+       "5          pickup_hour      3190.0\n",
+       "6           pickup_day      3071.0\n",
+       "7        pickup_minute      2854.0\n",
+       "11       pickup_second      2536.0\n",
+       "8         pickup_month      1535.0\n",
+       "4      passenger_count       831.0\n",
+       "9            vendor_id       470.0\n",
+       "10  store_and_fwd_flag        87.0\n",
        "12         pickup_year         0.0"
       ]
      },
@@ -781,6 +773,17 @@
     "feature_names = X_train.columns.values\n",
     "ft_importances = taxi_utils.feature_importances(model, feature_names)\n",
     "ft_importances"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p>\n",
+    "    <img src=\"https://www.featurelabs.com/wp-content/uploads/2017/12/logo.png\" alt=\"Featuretools\" />\n",
+    "</p>\n",
+    "\n",
+    "Featuretools was created by the developers at [Feature Labs](https://www.featurelabs.com/). If building impactful data science pipelines is important to you or your business, please [get in touch](https://www.featurelabs.com/contact.html)."
    ]
   }
  ],
@@ -800,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
