adapt to Featuretools v0.6.0 prerelease

--- a/NYC Taxi 4 - Custom Featuretools Primitives.ipynb
+++ b/NYC Taxi 4 - Custom Featuretools Primitives.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,11 +419,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def numbox(number, less=None, more=None):\n",
+    "def rush_numbox(number, less=7, more=11):\n",
+    "    output = []\n",
+    "    for i, name in enumerate(number):\n",
+    "        print(number[i])\n",
+    "        if less<=number[i] and number[i]<=more:\n",
+    "            output.append(True)\n",
+    "        else: \n",
+    "            output.append(False)\n",
+    "    return output\n",
+    "\n",
+    "def noon_numbox(number, less=11, more=13):\n",
+    "    output = []\n",
+    "    for i, name in enumerate(number):\n",
+    "        if less<=number[i] and number[i]<=more:\n",
+    "            output.append(True)\n",
+    "        else: \n",
+    "            output.append(False)\n",
+    "    return output\n",
+    "\n",
+    "def night_numbox(number, less=18, more=23):\n",
     "    output = []\n",
     "    for i, name in enumerate(number):\n",
     "        if less<=number[i] and number[i]<=more:\n",
@@ -437,17 +456,17 @@
     "                                        str(self.kwargs['less']), \n",
     "                                        str(self.kwargs['more']))\n",
     "\n",
-    "RushHour = make_trans_primitive(function=numbox,\n",
+    "RushHour = make_trans_primitive(function=rush_numbox,\n",
     "                                input_types=[vtypes.Datetime],\n",
     "                                return_type = vtypes.Boolean,\n",
     "                                cls_attributes = {\"get_name\": numbox_get_name})\n",
     "    \n",
-    "NoonHour = make_trans_primitive(function=numbox,\n",
+    "NoonHour = make_trans_primitive(function=noon_numbox,\n",
     "                                input_types=[vtypes.Datetime],\n",
     "                                return_type = vtypes.Boolean,\n",
     "                                cls_attributes = {\"get_name\": numbox_get_name})\n",
     "        \n",
-    "NightHour = make_trans_primitive(function=numbox,\n",
+    "NightHour = make_trans_primitive(function=night_numbox,\n",
     "                                 input_types=[vtypes.Datetime],\n",
     "                                 return_type = vtypes.Boolean,\n",
     "                                 cls_attributes = {\"get_name\": numbox_get_name})"
@@ -455,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,6 +504,8 @@
     "                else: \n",
     "                    output.append(False)\n",
     "            return output\n",
+    "        \n",
+    "        return geobox\n",
     "\n",
     "    def generate_name(self, base_feature_names):\n",
     "        return u\"GEOBOX({}, {}, {})\".format(base_feature_names[0],\n",
@@ -515,14 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Built 14 features\n"
+      "Built 12 features\n"
      ]
     },
     {
@@ -533,15 +554,13 @@
        " <Feature: trip_duration>,\n",
        " <Feature: passenger_count>,\n",
        " <Feature: vendor_id>,\n",
-       " <Feature: LATITUDE(pickup_latlong)>,\n",
-       " <Feature: LATITUDE(dropoff_latlong)>,\n",
-       " <Feature: LONGITUDE(pickup_latlong)>,\n",
-       " <Feature: LONGITUDE(dropoff_latlong)>,\n",
        " <Feature: GEOBOX(pickup_latlong, (40.62, -73.85), (40.7, -73.75))>,\n",
        " <Feature: GEOBOX(dropoff_latlong, (40.62, -73.85), (40.7, -73.75))>,\n",
        " <Feature: GEOBOX(pickup_latlong, (40.7, -73.97), (40.77, -73.9))>,\n",
        " <Feature: GEOBOX(dropoff_latlong, (40.7, -73.97), (40.77, -73.9))>,\n",
-       " <Feature: NUMBOX(pickup_datetime)>]"
+       " <Feature: RUSH_NUMBOX(pickup_datetime)>,\n",
+       " <Feature: NOON_NUMBOX(pickup_datetime)>,\n",
+       " <Feature: NIGHT_NUMBOX(pickup_datetime)>]"
       ]
      },
      "execution_count": 11,
@@ -551,12 +570,12 @@
    ],
    "source": [
     "agg_primitives = []\n",
-    "trans_primitives = [Bearing, Haversine, Cityblock, Latitude, Longitude,\n",
+    "trans_primitives = [#Bearing, Haversine, Cityblock, Latitude, Longitude,\n",
     "                    GeoBox(bottomleft=(40.62, -73.85), topright=(40.70, -73.75)),\n",
     "                    GeoBox(bottomleft=(40.70, -73.97), topright=(40.77, -73.9)),\n",
-    "                    RushHour(less=7, more=11),\n",
-    "                    NoonHour(less=11, more=13),\n",
-    "                    NightHour(less=18, more=23)]\n",
+    "                    RushHour,\n",
+    "                    NoonHour,\n",
+    "                    NightHour]\n",
     "\n",
     "# calculate feature_matrix using deep feature synthesis\n",
     "features = ft.dfs(entityset=es,\n",
@@ -586,46 +605,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Built 131 features\n",
-      "\n",
-      "Elapsed: 00:00 | Remaining: ? | Progress:   0%|          | Calculated: 0/11 chunks\u001b[A"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-714116087e59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m                                   \u001b[0mcutoff_time\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcutoff_time\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m                                   \u001b[0mapproximate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'36d'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m                                   max_depth=4)\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mfeature_matrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/featuretools-0.5.1-py3.6.egg/featuretools/synthesis/dfs.py\u001b[0m in \u001b[0;36mdfs\u001b[0;34m(entities, relationships, entityset, target_entity, cutoff_time, instance_ids, agg_primitives, trans_primitives, allowed_paths, max_depth, ignore_entities, ignore_variables, seed_features, drop_contains, drop_exact, where_primitives, max_features, cutoff_time_in_index, save_progress, features_only, training_window, approximate, chunk_size, n_jobs, dask_kwargs, verbose)\u001b[0m\n\u001b[1;32m    198\u001b[0m                                                   \u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m                                                   \u001b[0mdask_kwargs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdask_kwargs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m                                                   verbose=verbose)\n\u001b[0m\u001b[1;32m    201\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m         feature_matrix = calculate_feature_matrix(features,\n",
-      "\u001b[0;32m~/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/featuretools-0.5.1-py3.6.egg/featuretools/computational_backends/calculate_feature_matrix.py\u001b[0m in \u001b[0;36mcalculate_feature_matrix\u001b[0;34m(features, entityset, cutoff_time, instance_ids, entities, relationships, cutoff_time_in_index, training_window, approximate, save_progress, verbose, chunk_size, n_jobs, dask_kwargs, profile)\u001b[0m\n\u001b[1;32m    260\u001b[0m                                                  \u001b[0mcutoff_df_time_var\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcutoff_df_time_var\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m                                                  \u001b[0mtarget_time\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtarget_time\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 262\u001b[0;31m                                                  pass_columns=pass_columns)\n\u001b[0m\u001b[1;32m    263\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    264\u001b[0m     \u001b[0mfeature_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_matrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/featuretools-0.5.1-py3.6.egg/featuretools/computational_backends/calculate_feature_matrix.py\u001b[0m in \u001b[0;36mlinear_calculate_chunks\u001b[0;34m(chunks, features, approximate, training_window, profile, verbose, save_progress, entityset, no_unapproximated_aggs, cutoff_df_time_var, target_time, pass_columns)\u001b[0m\n\u001b[1;32m    523\u001b[0m                                           \u001b[0mcutoff_df_time_var\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    524\u001b[0m                                           \u001b[0mtarget_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpass_columns\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 525\u001b[0;31m                                           backend=backend)\n\u001b[0m\u001b[1;32m    526\u001b[0m         \u001b[0mfeature_matrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_feature_matrix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    527\u001b[0m         \u001b[0;31m# Do a manual garbage collection in case objects from calculate_chunk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/featuretools-0.5.1-py3.6.egg/featuretools/computational_backends/calculate_feature_matrix.py\u001b[0m in \u001b[0;36mcalculate_chunk\u001b[0;34m(chunk, features, approximate, training_window, profile, verbose, save_progress, no_unapproximated_aggs, cutoff_df_time_var, target_time, pass_columns, backend, entityset)\u001b[0m\n\u001b[1;32m    344\u001b[0m                                            \u001b[0mids\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    345\u001b[0m                                            \u001b[0mprecalculated_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprecalculated_features\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 346\u001b[0;31m                                            training_window=window)\n\u001b[0m\u001b[1;32m    347\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    348\u001b[0m             \u001b[0mid_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_feature_matrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/featuretools-0.5.1-py3.6.egg/featuretools/computational_backends/utils.py\u001b[0m in \u001b[0;36mwrapped\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0msave_progress\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m                 \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m                 \u001b[0mtime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_pydatetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/featuretools-0.5.1-py3.6.egg/featuretools/computational_backends/calculate_feature_matrix.py\u001b[0m in \u001b[0;36mcalc_results\u001b[0;34m(time_last, ids, precalculated_features, training_window)\u001b[0m\n\u001b[1;32m    318\u001b[0m                                                     \u001b[0mprecalculated_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprecalculated_features\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    319\u001b[0m                                                     \u001b[0mignored\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mall_approx_feature_set\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 320\u001b[0;31m                                                     profile=profile)\n\u001b[0m\u001b[1;32m    321\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    322\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/featuretools-0.5.1-py3.6.egg/featuretools/computational_backends/pandas_backend.py\u001b[0m in \u001b[0;36mcalculate_all_features\u001b[0;34m(self, instance_ids, time_last, training_window, profile, precalculated_features, ignored, verbose)\u001b[0m\n\u001b[1;32m    191\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m                     \u001b[0mhandler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_feature_type_handler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_feature\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 193\u001b[0;31m                     \u001b[0mresult_frame\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhandler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_frames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    194\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    195\u001b[0m                     \u001b[0moutput_frames_type\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_tree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_frames_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_feature\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/python/demos-featuretools/demo8/v0.6.0/predict-taxi-trip-duration/env3.6/lib/python3.6/site-packages/featuretools-0.5.1-py3.6.egg/featuretools/computational_backends/pandas_backend.py\u001b[0m in \u001b[0;36m_calculate_transform_features\u001b[0;34m(self, features, entity_frames)\u001b[0m\n\u001b[1;32m    317\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mvariable_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime_last\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    318\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 319\u001b[0;31m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mvariable_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    320\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    321\u001b[0m             \u001b[0;31m# if we don't get just the values, the assignment breaks when indexes don't match\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+      "Built 73 features\n",
+      "Elapsed: 00:00 | Remaining: ? | Progress:   0%|          | Calculated: 0/11 chunks"
      ]
     }
    ],
    "source": [
     "agg_primitives = ['Sum', 'Mean', 'Median', 'Std', 'Count', 'Min', 'Max', 'Num_Unique', 'Skew']\n",
-    "trans_primitives = [Bearing, Haversine, Cityblock, Latitude, Longitude,\n",
+    "trans_primitives = [#Bearing, Haversine, Cityblock, Latitude, Longitude,\n",
     "                    GeoBox(bottomleft=(40.62, -73.85), topright=(40.70, -73.75)),\n",
     "                    GeoBox(bottomleft=(40.70, -73.97), topright=(40.77, -73.9)),\n",
-    "                    RushHour(less=7, more=11),\n",
-    "                    NoonHour(less=11, more=13),\n",
-    "                    NightHour(less=18, more=23),\n",
+    "                    RushHour,\n",
+    "                    NoonHour,\n",
+    "                    NightHour,\n",
     "                    'Day', 'Hour', 'Minute', 'Month', 'Weekday', 'Week', 'Is_weekend']\n",
     "\n",
     "# this allows us to create features that are conditioned on a second value before we calculate.\n",
